--- a/template.mustache
+++ b/template.mustache
@@ -18,6 +18,7 @@
 {{#controls}}
   <div class="controls">
     <div class="arrow prev"></div>
+    <div class="overview">☷</div>
     <div class="arrow next"></div>
   </div>
 {{/controls}}
